@@ -526,7 +526,7 @@
 "Similar artists":"",
 "Single field only":"",
 "Single line only":"",
-"Single when wide enough":"",
+"Show when wide enough":"",
 "Skip backward":"",
 "Skip forward":"",
 "Sleep":"",
