@@ -525,7 +525,7 @@
 "Similar artists":"Podobní interpreti",
 "Single field only":"Pouze jedno pole",
 "Single line only":"Pouze jeden řádek",
-"Single when wide enough":"Jednotné, pokud je dostatečná šířka",
+"Show when wide enough":"Zobrazit, pokud je dostatečná šířka",
 "Skip backward":"Přeskočení zpět",
 "Skip forward":"Přeskočení vpřed",
 "Sleep":"Spánek",
