@@ -526,7 +526,7 @@
 "Similar artists":"Lignende kunstnere",
 "Single field only":"Kun enkeltfelt",
 "Single line only":"Kun enkeltlinje",
-"Single when wide enough":"Alene når billedet er bredt nok",
+"Show when wide enough":"Vis når den er bred nok",
 "Skip backward":"Hop bagud",
 "Skip forward":"Hop fremad",
 "Sleep":"Dvale",
