@@ -515,7 +515,7 @@
 "Similar artists":"Ähnliche Interpreten",
 "Single field only":"Nur ein Feld",
 "Single line only":"Nur eine Zeile",
-"Single when wide enough":"Nur anzeigen, wenn genügend Platz da ist",
+"Show when wide enough":"Zeigen Sie es, wenn genügend Platz da ist",
 "Skip backward":"Zurück",
 "Skip forward":"Vor",
 "Sleep":"Schlummern",
