@@ -525,7 +525,7 @@
 "Similar artists":"Artistas similares",
 "Single field only":"Solo campo único",
 "Single line only":"Solo línea única",
-"Single when wide enough":"Único cuando sea suficientemente ancho",
+"Show when wide enough":"Mostrar cuando sea suficientemente ancho",
 "Skip backward":"Saltar hacia atrás",
 "Skip forward":"Saltar hacia adelante",
 "Sleep":"Suspender",
