@@ -523,7 +523,7 @@
 "Similar artists":"Artistes similaires",
 "Single field only":"Sur un seul critère",
 "Single line only":"Sur une seule ligne",
-"Single when wide enough":"Si assez de place",
+"Show when wide enough":"Si assez de place",
 "Skip backward":"Saut arrière",
 "Skip forward":"Saut avant",
 "Sleep":"Mise en veille",
