@@ -720,7 +720,7 @@
 "Show always":"",
 "Show shortcuts to pinned home screen items in main menu. (NOTE: Radio streams and random mixes are excluded.)":"",
 "Single line only":"",
-"Single when wide enough":"",
+"Show when wide enough":"",
 "Start artist mix":"",
 "Streaming Services":"",
 "Switch off all players?":"",
