@@ -737,7 +737,7 @@
 "Recently Played Artists":"",
 "Set/Disc subtitle":"",
 "Show always":"",
-"Single when wide enough":"",
+"Show when wide enough":"",
 "Spacebar":"",
 "Start artist mix":"",
 "Subtitle":"",
