@@ -525,7 +525,7 @@
 "Similar artists":"Vergelijkbare artiesten",
 "Single field only":"Alleen enkel veld",
 "Single line only":"Alleen één regel",
-"Single when wide enough":"Enkel wanneer breed genoeg",
+"Show when wide enough":"Enkel wanneer breed genoeg",
 "Skip backward":"Achteruit skippen",
 "Skip forward":"Vooruit skippen",
 "Sleep":"Slapen",
