@@ -727,7 +727,7 @@
 "Scrollable lists":"Прокручиваемые списки",
 "Set/Disc subtitle":"Пояснения к Комплекту/Диску",
 "Show always":"Всегда отображать",
-"Single when wide enough":"Одиночный, если достаточно большой",
+"Show when wide enough":"Показывать, когда достаточно широко",
 "Start artist mix":"Начать микс исполнителей",
 "Streaming Services":"Стриминговые сервисы",
 "Switch off all players?":"Выключить все проигрыватели?",
