@@ -527,7 +527,7 @@
 "Similar artists":"Liknande artister",
 "Single field only":"Bara ett fält",
 "Single line only":"Bara en rad",
-"Single when wide enough":"Visa bara om det finns plats",
+"Show when wide enough":"Visa bara om det finns plats",
 "Skip backward":"Hoppa tillbaka",
 "Skip forward":"Hoppa framåt",
 "Sleep":"Viloläge",
