@@ -736,7 +736,7 @@
 "Scrollable lists":"",
 "Set/Disc subtitle":"",
 "Show always":"",
-"Single when wide enough":"",
+"Show when wide enough":"",
 "Start artist mix":"",
 "The order of 'Scrollable list' items can be changed, here, by drag and drop.":"",
 "Type":"",
