@@ -680,7 +680,7 @@
 "Show track number next to title.":"",
 "Shuffle releases":"",
 "Single line only":"",
-"Single when wide enough":"",
+"Show when wide enough":"",
 "Skip backward":"",
 "Skip forward":"",
 "Some settings were changed. Do you want to save them?":"",
